optimized the code based modernized it based on the latest trade-offs